these don't really support https

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 </head>
 <body>
 <a href="https://twitter.com/johnjoseph">Twitter</a> 
-<a href="https://blog.johnjosephbachir.org">neglected old blog</a> 
-<a href="https://johnjosephbachir.posterous.com">neglected new blog</a> 
+<a href="http://blog.johnjosephbachir.org">neglected old blog</a> 
+<a href="http://johnjosephbachir.posterous.com">neglected new blog</a> 
 
 </body>
 </html>
