adding github and linkedin links

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <title>John Joseph Bachir</title>
 </head>
 <body>
+<a href="https://github.com/jjb">GitHub</a>
 <a href="https://twitter.com/johnjoseph">Twitter</a> 
+<a href="http://www.linkedin.com/in/johnjosephbachir">LinkedIn</a>
 <a href="http://blog.johnjosephbachir.org">neglected old blog</a> 
 <a href="http://johnjosephbachir.posterous.com">neglected new blog</a> 
 
