--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <title>John Joseph Bachir</title>
 </head>
 <body>
+<a href='m&#97;i&#108;t&#111;&#58;j&#64;j&#106;%62&#46;&#99;&#99;'>email</a>
 <a href="https://github.com/jjb">GitHub</a>
 <a href="https://twitter.com/johnjoseph">Twitter</a> 
 <a href="http://www.linkedin.com/in/johnjosephbachir">LinkedIn</a>
