link to gist (my "code blog")

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <a href="https://github.com/jjb">GitHub</a>
 <a href="https://twitter.com/johnjoseph">Twitter</a> 
 <a href="http://www.linkedin.com/in/johnjosephbachir">LinkedIn</a>
+<a href="https://gist.github.com/jjb">Code Blog</a> <a href="https://gist.github.com/jjb.atom">atom</a>
 <a href="http://blog.johnjosephbachir.org">neglected old blog</a> 
 <a href="http://johnjosephbachir.posterous.com">neglected new blog</a> 
 
