--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
 <title>John Joseph Bachir</title>
 </head>
 <body>
-<a href='m&#97;i&#108;t&#111;&#58;j&#64;j&#106;%62&#46;&#99;&#99;'>email</a>
-<a href="https://github.com/jjb">GitHub</a>
-<a href="https://twitter.com/johnjoseph">Twitter</a> 
-<a href="http://www.linkedin.com/in/johnjosephbachir">LinkedIn</a>
-<a href="https://gist.github.com/jjb">Code Blog</a> <a href="https://gist.github.com/jjb.atom">atom</a>
-<a href="http://blog.johnjosephbachir.org">neglected old blog</a> 
-<a href="http://johnjosephbachir.posterous.com">neglected new blog</a> 
+
+<ul>
+  <li><a href='m&#97;i&#108;t&#111;&#58;j&#64;j&#106;%62&#46;&#99;&#99;'>email</a></li>
+  <li><a href="https://github.com/jjb">GitHub</a></li>
+  <li><a href="https://twitter.com/johnjoseph">Twitter</a> </li>
+  <li><a href="http://www.linkedin.com/in/johnjosephbachir">LinkedIn</a></li>
+  <li><a href="https://gist.github.com/jjb">Code Blog</a> <a href="https://gist.github.com/jjb.atom">atom</a></li>
+  <li><a href="http://blog.johnjosephbachir.org">neglected old blog</a> </li>
+  <li><a href="http://johnjosephbachir.posterous.com">neglected new blog</a> </li>
+</ul>
 
 </body>
 </html>
