--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <li><a href="https://gist.github.com/jjb">Code Blog</a> <a href="https://gist.github.com/jjb.atom">atom</a></li>
   <li><a href="http://blog.johnjosephbachir.org">neglected old blog</a> </li>
   <li><a href="http://johnjosephbachir.posterous.com">neglected new blog</a> </li>
+  <li><a href="http://johnjoseph.tumblr.com/" title="Tumblr">unused Tumblr</a></li>
 </ul>
 
 </body>
