--- a/index.html
+++ b/index.html
@@ -1,20 +1,36 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>John Joseph Bachir</title>
+  <meta charset="utf-8" />
+  <title>John Joseph Bachir</title>
+  <link rel="stylesheet" href="css/blueprint/screen.css" media="screen, projection">
+  <link rel="stylesheet" href="css/blueprint/print.css" media="print"> 
+  <!--[if lt IE 8]>
+    <link rel="stylesheet" href="css/blueprint/ie.css" type="text/css" media="screen, projection">
+  <![endif]-->
+  <link rel="stylesheet" href="css/style.css" media="screen, projection"> 
 </head>
 <body>
 
-<ul>
-  <li><a href='m&#97;i&#108;t&#111;&#58;j&#64;j&#106;%62&#46;&#99;&#99;'>email</a></li>
-  <li><a href="https://github.com/jjb">GitHub</a></li>
-  <li><a href="https://twitter.com/johnjoseph">Twitter</a> </li>
-  <li><a href="http://www.linkedin.com/in/johnjosephbachir">LinkedIn</a></li>
-  <li><a href="https://gist.github.com/jjb">Code Blog</a> <a href="https://gist.github.com/jjb.atom">atom</a></li>
-  <li><a href="http://blog.johnjosephbachir.org">neglected old blog</a> </li>
-  <li><a href="http://johnjosephbachir.posterous.com">neglected new blog</a> </li>
-  <li><a href="http://johnjoseph.tumblr.com/" title="Tumblr">unused Tumblr</a></li>
-</ul>
+<div class="container">
+  <div class="span-10">
+    <h1>John Joseph Bachir</h1>
+    <p class="small">is technology lead at <a href="https://ganxy.com">Ganxy</a></p>
+  </div>
+  <div class="prepend-2 span-12 last">
+    <ul>
+      <li><a href='m&#97;i&#108;t&#111;&#58;j&#64;j&#106;%62&#46;&#99;&#99;'>email</a></li>
+      <li><a href="https://github.com/jjb">GitHub</a></li>
+      <li><a href="https://twitter.com/johnjoseph">@johnjoseph</a> </li>
+      <li><a href="https://twitter.com/johnjoseph_code">@johnjoseph_code</a> </li>
+      <li><a href="http://www.linkedin.com/in/johnjosephbachir">LinkedIn</a></li>
+      <li><a href="https://gist.github.com/jjb">Code Blog</a>
+      <li><a class="small" href="http://blog.johnjosephbachir.org">neglected old blog</a> </li>
+      <li><a class="small" href="http://johnjosephbachir.posterous.com">neglected new blog</a> </li>
+      <li><a class="small" href="http://johnjoseph.tumblr.com/" title="Tumblr">unused Tumblr</a></li>
+    </ul>
+  </div>
+</div>
 
 </body>
 </html>
