--- a/index.html
+++ b/index.html
@@ -20,16 +20,18 @@
     <p class="small">is technology lead at <a href="https://ganxy.com">Ganxy</a></p>
   </div>
   <div class="prepend-2 span-12 last">
-    <ul>
+    <ul class="prepend-1 span-12">
       <li><a href='m&#97;i&#108;t&#111;&#58;j&#64;j&#106;%62&#46;&#99;&#99;'>email</a></li>
       <li><a href="https://github.com/jjb">GitHub</a></li>
-      <li><a href="https://twitter.com/johnjoseph">@johnjoseph</a> </li>
-      <li><a href="https://twitter.com/johnjoseph_code">@johnjoseph_code</a> </li>
+      <li><a href="https://twitter.com/johnjoseph" title="main twitter">@johnjoseph</a> </li>
+      <li><a href="https://twitter.com/johnjoseph_code" title="twitter about programming">@johnjoseph_code</a> </li>
       <li><a href="http://www.linkedin.com/in/johnjosephbachir">LinkedIn</a></li>
       <li><a href="https://gist.github.com/jjb">Code Blog</a>
-      <li><a class="small" href="http://blog.johnjosephbachir.org">neglected old blog</a> </li>
-      <li><a class="small" href="http://johnjosephbachir.posterous.com">neglected new blog</a> </li>
-      <li><a class="small" href="http://johnjoseph.tumblr.com/" title="Tumblr">unused Tumblr</a></li>
+    </ul>
+    <ul class="prepend-1 span-12 last neglected">
+      <li><a href="http://blog.johnjosephbachir.org">neglected old blog</a> </li>
+      <li><a href="http://johnjosephbachir.posterous.com">neglected new blog</a> </li>
+      <li><a href="http://johnjoseph.tumblr.com/" title="Tumblr">unused Tumblr</a></li>
     </ul>
   </div>
 </div>
