the blogs are alive!

--- a/index.html
+++ b/index.html
@@ -27,11 +27,9 @@
       <li><a href="https://twitter.com/johnjoseph_code" title="twitter about programming">@johnjoseph_code</a> </li>
       <li><a href="http://www.linkedin.com/in/johnjosephbachir">LinkedIn</a></li>
       <li><a href="https://gist.github.com/jjb">Code Blog</a>
-    </ul>
-    <ul class="prepend-1 span-12 last neglected">
-      <li><a href="http://blog.johnjosephbachir.org">neglected old blog</a> </li>
-      <li><a href="http://johnjosephbachir.posterous.com">neglected new blog</a> </li>
-      <li><a href="http://johnjoseph.tumblr.com/" title="Tumblr">unused Tumblr</a></li>
+      <li><a href="http://blog.johnjosephbachir.org">Blog</a> </li>
+      <li><a href="http://johnjoseph.tumblr.com/" title="Tumblr">Tumblr</a></li>
+      <li><a href="http://johnjosephbachir.posterous.com">Posterous</a> </li>
     </ul>
   </div>
 </div>
