remove and change some links

--- a/index.html
+++ b/index.html
@@ -26,10 +26,8 @@
       <li><a href="https://twitter.com/johnjoseph" title="main twitter">@johnjoseph</a> </li>
       <li><a href="https://twitter.com/johnjoseph_code" title="twitter about programming">@johnjoseph_code</a> </li>
       <li><a href="http://www.linkedin.com/in/johnjosephbachir">LinkedIn</a></li>
-      <li><a href="https://gist.github.com/jjb">Code Blog</a>
+      <li><a href="http://code.jjb.cc">Code Blog</a>
       <li><a href="http://blog.johnjosephbachir.org">Blog</a> </li>
-      <li><a href="http://johnjoseph.tumblr.com/" title="Tumblr">Tumblr</a></li>
-      <li><a href="http://johnjosephbachir.posterous.com">Posterous</a> </li>
     </ul>
   </div>
 </div>
