--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       <li><a href="http://www.linkedin.com/in/johnjosephbachir">LinkedIn</a></li>
       <li><a href="http://code.jjb.cc">Code Blog</a>
       <li><a href="http://blog.johnjosephbachir.org">Blog</a> </li>
+      <li><a href="http://instagram.com/johnjosephbachir/">Instagram</a></li>
     </ul>
   </div>
 </div>
