add link to app.net

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       <li><a href="https://github.com/jjb">GitHub</a></li>
       <li><a href="https://twitter.com/johnjoseph" title="main twitter">@johnjoseph</a> </li>
       <li><a href="https://twitter.com/johnjoseph_code" title="twitter about programming">@johnjoseph_code</a> </li>
+      <li><a href="https://alpha.app.net/jjb">App.net</a> </li>
       <li><a href="http://www.linkedin.com/in/johnjosephbachir">LinkedIn</a></li>
       <li><a href="http://code.jjb.cc">Code Blog</a>
       <li><a href="http://blog.johnjosephbachir.org">Blog</a> </li>
