--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <div class="container">
   <div class="span-10">
     <h1>John Joseph Bachir</h1>
-    <p class="small">is the CTO of <a href="https://ganxy.com">Ganxy</a>.</p>
+    <p class="small">is the CTO of <a href="https://medstro.com">Medstro</a>.</p>
   </div>
   <div class="prepend-2 span-12 last">
     <ul class="prepend-1 span-12">
