reorder some things and add blog and newsletter

--- a/index.html
+++ b/index.html
@@ -27,13 +27,15 @@
   <div class="prepend-2 span-12 last">
     <ul class="prepend-1 span-12">
       <li><a href='m&#97;i&#108;t&#111;&#58;j&#64;j&#106;%62&#46;&#99;&#99;'>email</a></li>
+      <li><a href="http://tinyletter.com/jjb">Newsletter</a></li>
       <li><a href="https://github.com/jjb">GitHub</a></li>
       <li><a href="https://twitter.com/johnjoseph" title="main twitter">@johnjoseph</a> </li>
       <li><a href="https://twitter.com/jjb_code" title="twitter about programming">@jjb_code</a> </li>
-      <li><a href='https://alpha.app.net/jjb' rel='me'>App.net</a></li>
       <li><a href="http://www.linkedin.com/in/johnjosephbachir">LinkedIn</a></li>
+      <li><a href="http://blog.jjb.cc">Blog</a>
       <li><a href="http://code.jjb.cc">Code Blog</a>
       <li><a href="http://instagram.com/johnjosephbachir/">Instagram</a></li>
+      <li><a href='https://alpha.app.net/jjb' rel='me'>App.net</a></li>
     </ul>
   </div>
 </div>
