--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8" />
-  <title>John Joseph Bachir</title>
+  <title>John Bachir</title>
 
   <link rel="stylesheet" href="css/blueprint/screen.css" media="screen, projection">
   <link rel="stylesheet" href="css/blueprint/print.css" media="print"> 
@@ -12,8 +12,8 @@
 
 <div class="container">
   <div class="span-10">
-    <h1>John Joseph Bachir</h1>
-    <p class="small">is the CTO of <a href="https://medstro.com">Medstro</a>.</p>
+    <h1>John  Bachir</h1>
+    <p class="small">is the CTO of <a href="https://freedom.to">Freedom</a> and a Co-Founder of <a href="https://medstro.com">Medstro</a>.</p>
   </div>
   <div class="prepend-2 span-12 last">
     <ul class="prepend-1 span-12">
