--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
   <div class="prepend-2 span-12 last">
     <ul class="prepend-1 span-12">
       <li><a href='m&#97;i&#108;t&#111;&#58;j&#64;j&#106;%62&#46;&#99;&#99;'>email</a></li>
-      <li><a href="http://tinyletter.com/jjb">newsletter</a></li>
+      <li><a href="https://tinyletter.com/jjb">newsletter</a></li>
       <li><a href="https://github.com/jjb">GitHub</a></li>
       <li><a href="https://twitter.com/johnjoseph" title="main twitter">@johnjoseph</a> </li>
       <li><a href="https://twitter.com/jjb_code" title="twitter about programming">@jjb_code</a> </li>
-      <li><a href="http://www.linkedin.com/in/johnjosephbachir">LinkedIn</a></li>
-      <li><a href="http://instagram.com/johnjosephbachir/">Instagram</a></li>
+      <li><a href="https://www.linkedin.com/in/johnjosephbachir">LinkedIn</a></li>
+      <li><a href="https://instagram.com/johnjosephbachir/">Instagram</a></li>
     </ul>
   </div>
 </div>
