--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </div>
   <div class="prepend-2 span-12 last">
     <ul class="prepend-1 span-12">
-      <li><a href='m&#97;i&#108;t&#111;&#58;j&#64;j&#106;%62&#46;&#99;&#99;'>email</a></li>
+      <li><dt>email</dt><dd>the letter "j" @ this domain</dd></li>
       <li><a href="https://tinyletter.com/jjb">newsletter</a></li>
       <li><a href="https://github.com/jjb">GitHub</a></li>
       <li><a href="https://twitter.com/johnjoseph" title="main twitter">@johnjoseph</a> </li>
