change email formatting

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </div>
   <div class="prepend-2 span-12 last">
     <ul class="prepend-1 span-12">
-      <li><dt>email</dt><dd>the letter "j" @ this domain</dd></li>
+      <li><b>email:</b> <code>j@ this domain</code></li>
       <li><a href="https://tinyletter.com/jjb">newsletter</a></li>
       <li><a href="https://github.com/jjb">GitHub</a></li>
       <li><a href="https://twitter.com/johnjoseph" title="main twitter">@johnjoseph</a> </li>
