--- a/gotv.html
+++ b/gotv.html
@@ -7,6 +7,13 @@
   <title>How to Get Out The Vote for Democrats in the 2018 Midterms</title>
   <meta name="description" content="How to Get Out The Vote for Democrats in the 2018 Midterms">
   <meta name="author" content="John Bachir">
+
+  <meta property="og:image" content="https://jjb.cc/gotv.jpg">
+  <meta name="twitter:image:src" content="https://jjb.cc/gotv.jpg">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:site" content="@johnjoseph">
+  <meta name="twitter:creator" content="@johnjoseph">
+
 </head>
 
 <body>
