--- a/gotv.html
+++ b/gotv.html
@@ -9,6 +9,7 @@
   <meta name="author" content="John Bachir">
 
   <meta property="og:image" content="https://jjb.cc/gotv.jpg">
+  <meta property="og:title" content="How to Get Out The Vote for Democrats in the 2018 Midterms">
   <meta name="twitter:image:src" content="https://jjb.cc/gotv.jpg">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@johnjoseph">
