--- a/gotv.html
+++ b/gotv.html
@@ -22,7 +22,7 @@
 <script src="https://gist.github.com/jjb/3f560bb078f87965acd15a596c458d03.js"></script>
 
 <br>
-<img src="https://jjb.cc/gotv.jpg">
+<img src="https://jjb.cc/gotv.jpg" width="900">
 
 </body>
 </html>
