--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
 <div class="container">
   <div class="span-10">
     <h1>John Bachir</h1>
-    <p class="small">is the CTO of <a href="https://freedom.to">Freedom</a> and a Co-Founder of <a href="https://medstro.com">Medstro</a>.</p>
+    <p class="small">is Director of Engineering at <a href="https://gethealthie.com">Healthie</a>,
+      former CTO of <a href="https://freedom.to">Freedom</a>,
+      and Co-Founder of <a href="https://medstro.com">Medstro</a>.
+    </p>
   </div>
   <div class="prepend-2 span-12 last">
     <ul class="prepend-1 span-12">
