redirect to democracy roadmap

--- a/gotv.html
+++ b/gotv.html
@@ -2,6 +2,8 @@
 
 <html lang="en">
 <head>
+  <meta http-equiv="refresh" content="0; url=https://democracyroadmap.us/" />
+
   <meta charset="utf-8">
 
   <title>How to Get Out The Vote for Democrats in the 2018 Midterms</title>
