--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <div class="span-10">
     <h1>John Bachir</h1>
     <p class="small">is Director of Engineering at <a href="https://gethealthie.com">Healthie</a>,
+      advisor at <a href="https://ourbulletin.co">Bulletin</a>,
       former CTO of <a href="https://freedom.to">Freedom</a>,
       and Co-Founder of <a href="https://medstro.com">Medstro</a>.
     </p>
