--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
   <div class="prepend-2 span-12 last">
     <ul class="prepend-1 span-12">
       <li><b>email:</b> <code>j@ this domain</code></li>
+      <li><a href="https://code.jjb.cc">code blog</a></li>
+      <li><a href="https://blog.jjb.cc">other blog</a></li>
       <li><a href="https://tinyletter.com/jjb">newsletter</a></li>
       <li><a href="https://github.com/jjb">GitHub</a></li>
       <li><a href="https://twitter.com/johnjoseph" title="main twitter">@johnjoseph</a> </li>
