--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8" />
   <title>John Bachir</title>
 
+  <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
   <link rel="stylesheet" href="css/blueprint/screen.css" media="screen, projection">
   <link rel="stylesheet" href="css/blueprint/print.css" media="print"> 
   <link rel="stylesheet" href="css/style.css" media="screen, projection"> 
